change th:include to th:insert

--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--    LINKS  -->
-    <th:block th:include="~{fragments/links}"></th:block>
+    <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Кашони </title>
     <link href="/css/show.css" rel="stylesheet">
@@ -37,7 +37,7 @@ margin: 0 auto; /* Опционално: Центриране на карта х
 <body>
 <div class="wrapper">
 <!--    HEADER  -->
-<th:block th:include="~{fragments/header}"></th:block>
+<th:block th:insert="~{fragments/header}"></th:block>
 
 
     <div class="main">
