--- a/src/main/resources/templates/Certificate/Certificate.html
+++ b/src/main/resources/templates/Certificate/Certificate.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <!--    LINKS  -->
-    <th:block th:include="~{fragments/links}"></th:block>
+    <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Сертификат </title>
     <link href="/css/show.css" rel="stylesheet">
@@ -20,7 +20,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
-    <th:block th:include="~{fragments/header}"></th:block>
+    <th:block th:insert="~{fragments/header}"></th:block>
 
 
     <div class="main">
