--- a/src/main/resources/templates/Invoice/showAllInvoices.html
+++ b/src/main/resources/templates/Invoice/showAllInvoices.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--    LINKS  -->
-    <th:block th:include="~{fragments/links}"></th:block>
+    <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Всички Фактури </title>
     <link href="/css/show.css" rel="stylesheet">
@@ -21,7 +21,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
-    <th:block th:include="~{fragments/header}"></th:block>
+    <th:block th:insert="~{fragments/header}"></th:block>
 
 
     <div class="main">
