--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <!--    LINKS  -->
-    <th:block th:include="~{fragments/links}"></th:block>
+    <th:block th:insert="~{fragments/links}"></th:block>
     <title> Lukeria меню </title>
 </head>
 <script>
@@ -18,7 +18,7 @@
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
-    <th:block th:include="~{fragments/header}"></th:block>
+    <th:block th:insert="~{fragments/header}"></th:block>
 
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
