--- a/src/main/resources/templates/pages-blank.html
+++ b/src/main/resources/templates/pages-blank.html
@@ -23,7 +23,7 @@
 <body>
 <div class="wrapper">
 	<!--    HEADER  -->
-	<th:block th:include="~{fragments/header}"></th:block>
+	<th:block th:insert="~{fragments/header}"></th:block>
 	<div class="main">
 		<nav class="navbar navbar-expand navbar-light navbar-bg">
 			<a class="sidebar-toggle js-sidebar-toggle">
