add favicon and resize the default image plate table

--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -5,6 +5,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Фактура </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/invoice.css" rel="stylesheet">
 </head>
 <script>
