--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -6,7 +6,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Кутии </title>
-
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
