--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <!--    LINKS  -->
     <th:block th:insert="~{fragments/links}"></th:block>
     <title> Lukeria меню </title>
+    <link rel="icon" type="image/x-icon" href="img/photos/noImage.png">
 </head>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
