--- a/src/main/resources/templates/Carton/edit.html
+++ b/src/main/resources/templates/Carton/edit.html
@@ -5,6 +5,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Кашони </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/form.css" rel="stylesheet">
 </head>
 <style>
