--- a/src/main/resources/templates/MaterialOrder/create.html
+++ b/src/main/resources/templates/MaterialOrder/create.html
@@ -6,6 +6,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Поръчка на материали </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/form.css" rel="stylesheet">
 </head>
 <script>
