--- a/src/main/resources/templates/MonthlyOrder/addProduct.html
+++ b/src/main/resources/templates/MonthlyOrder/addProduct.html
@@ -6,6 +6,7 @@
   <th:block th:insert="~{fragments/links}"></th:block>
 
   <title> Добави продукти към поръчка </title>
+  <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
   <link href="/css/form.css" rel="stylesheet">
   <link href="/css/checkbox.css" rel="stylesheet">
 </head>
