--- a/src/main/resources/templates/Plate/show.html
+++ b/src/main/resources/templates/Plate/show.html
@@ -5,6 +5,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Тарелки </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
 </head>
 <script>
@@ -75,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                                  width="100">
                                             <img th:unless="${plate.photo != null}"
                                                  class="card-img-top"
-                                                 src="/img/photos/noImage.png"
+                                                 src="/img/photos/logo2.png"
                                                  alt="Default Image"
                                                  height="100"
                                                  width="100">
