--- a/src/main/resources/templates/User/show.html
+++ b/src/main/resources/templates/User/show.html
@@ -5,6 +5,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Потребители </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
 </head>
 <script>
