--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,7 @@
     <th:block th:insert="~{fragments/links}"></th:block>
 
     <title> Регистрирай се </title>
+    <link rel="icon" type="image/x-icon" href="img/photos/noImage.png">
 </head>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
