--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -113,7 +113,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                          <span th:unless="${invoiceDTO.invoiceNumber  >= 2000000000}" th:text="${packageDTO.englishName}"></span>
                                        </span>
                                         </td>
-                                        <td class="quantity-input" th:text="${orderProductDTO.number } + #{label.num}">
+                                        <td class="quantity-input" th:text="${orderProductDTO.number } +' '+ #{label.num}">
                                         </td>
 
                                         <td class="price-input">
@@ -135,7 +135,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                              th:each="productDTO : ${productDTOS}" th:if="${productDTO.id == orderProductDTO.packageId}"
                                              th:id="${'productValue-' + productDTO.id}">
                                              <span th:if="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber}"></span>
-                                             <span hidden th:unless="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber * 1.95583}"></span>
+                                             <span hidden th:unless="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber / 1.95583}"></span>
                                                 <span th:unless="${invoiceDTO.invoiceNumber >= 2000000000}">
                                                     <script th:inline="javascript">
                                                     var originalValue = /*[[${productPrice * orderNumber / 1.95583}]]*/ 0;
